# sqldiff

./: .arcconfig  .gitignore  Makefile.am  README.md  configure.ac  local.mk
include/: sqldiff.hh
src/: character.hh  column.hh  diff.cc  diff.hh  integer.cc  integer.hh  local.mk  sql.hh  sql_grammar.hh  sqldiff.cc  sqldiff_main.cc  statement.hh  table.hh  type.cc  type.hh
test/: create.cc  distance.cc  grammar.cc  hello.cc  local.mk
